syntax = "proto3";

package pb;
option go_package = "../pb";

service MetaLandWorker {
  rpc TriggerUCETask(TriggerUCETaskRequest) returns (TriggerUCETaskResponse);
}

message TriggerUCETaskRequest {
  string key = 1;
}

message TriggerUCETaskResponse {
  string status = 1;
}